// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders FadeSetting when checked using Snapshots 1`] = `
<View
  colorScheme="light"
  colors={
    Object {
      "ShadeOne": "#eeeeee",
      "ShadeThree": "#8e8e93",
      "ShadeTwo": "#b5b5b5",
      "activeTintOne": "#e26901",
      "background": "#fff",
      "border": "#C9C9CE",
      "card": "#fff",
      "inActiveTintOne": "#e26901",
      "primary": "#1b365d",
      "screenBackground": "#eeeeee",
      "text": "#A59F9A",
      "textFive": "#555555",
      "textFour": "#4C4C4C",
      "textThree": "#000",
      "textTwo": "#777777",
    }
  }
  dark={false}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <Text
    allowFontScaling={false}
    colorScheme="light"
    colors={
      Object {
        "ShadeOne": "#eeeeee",
        "ShadeThree": "#8e8e93",
        "ShadeTwo": "#b5b5b5",
        "activeTintOne": "#e26901",
        "background": "#fff",
        "border": "#C9C9CE",
        "card": "#fff",
        "inActiveTintOne": "#e26901",
        "primary": "#1b365d",
        "screenBackground": "#eeeeee",
        "text": "#A59F9A",
        "textFive": "#555555",
        "textFour": "#4C4C4C",
        "textThree": "#000",
        "textTwo": "#777777",
      }
    }
    dark={false}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#8e8e93",
          "fontSize": 26.250000000000004,
          "marginTop": 20.83275,
        },
        undefined,
      ]
    }
  />
  <View
    accessibilityLabel=" , , "
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomLeftRadius": 2,
        "borderTopLeftRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      color="#999"
      colorScheme="light"
      colors={
        Object {
          "ShadeOne": "#eeeeee",
          "ShadeThree": "#8e8e93",
          "ShadeTwo": "#b5b5b5",
          "activeTintOne": "#e26901",
          "background": "#fff",
          "border": "#C9C9CE",
          "card": "#fff",
          "inActiveTintOne": "#e26901",
          "primary": "#1b365d",
          "screenBackground": "#eeeeee",
          "text": "#A59F9A",
          "textFive": "#555555",
          "textFour": "#4C4C4C",
          "textThree": "#000",
          "textTwo": "#777777",
        }
      }
      dark={false}
      importantForAccessibility="yes"
      size={30}
      style={
        Object {
          "backgroundColor": "#1b365d",
          "borderColor": "#1b365d",
          "borderRadius": 2,
          "borderWidth": 1,
          "color": "#fff",
          "fontFamily": "telldusicons",
          "fontSize": 41,
          "marginLeft": 20.83275,
          "marginTop": 20.83275,
          "overflow": "hidden",
          "padding": 2,
          "textAlign": "center",
          "textAlignVertical": "center",
        }
      }
    >
      checkmark
    </Text>
  </View>
</View>
`;

exports[`renders FadeSetting when unchecked using Snapshots 1`] = `
<View
  colorScheme="light"
  colors={
    Object {
      "ShadeOne": "#eeeeee",
      "ShadeThree": "#8e8e93",
      "ShadeTwo": "#b5b5b5",
      "activeTintOne": "#e26901",
      "background": "#fff",
      "border": "#C9C9CE",
      "card": "#fff",
      "inActiveTintOne": "#e26901",
      "primary": "#1b365d",
      "screenBackground": "#eeeeee",
      "text": "#A59F9A",
      "textFive": "#555555",
      "textFour": "#4C4C4C",
      "textThree": "#000",
      "textTwo": "#777777",
    }
  }
  dark={false}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "transparent",
      "flexDirection": "row",
      "justifyContent": "center",
    }
  }
>
  <Text
    allowFontScaling={false}
    colorScheme="light"
    colors={
      Object {
        "ShadeOne": "#eeeeee",
        "ShadeThree": "#8e8e93",
        "ShadeTwo": "#b5b5b5",
        "activeTintOne": "#e26901",
        "background": "#fff",
        "border": "#C9C9CE",
        "card": "#fff",
        "inActiveTintOne": "#e26901",
        "primary": "#1b365d",
        "screenBackground": "#eeeeee",
        "text": "#A59F9A",
        "textFive": "#555555",
        "textFour": "#4C4C4C",
        "textThree": "#000",
        "textTwo": "#777777",
      }
    }
    dark={false}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "color": "#8e8e93",
          "fontSize": 26.250000000000004,
          "marginTop": 20.83275,
        },
        undefined,
      ]
    }
  />
  <View
    accessibilityLabel=" , , "
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderBottomLeftRadius": 2,
        "borderTopLeftRadius": 2,
        "flexDirection": "row",
        "justifyContent": "center",
        "opacity": 1,
        "overflow": "hidden",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={false}
      color="#999"
      colorScheme="light"
      colors={
        Object {
          "ShadeOne": "#eeeeee",
          "ShadeThree": "#8e8e93",
          "ShadeTwo": "#b5b5b5",
          "activeTintOne": "#e26901",
          "background": "#fff",
          "border": "#C9C9CE",
          "card": "#fff",
          "inActiveTintOne": "#e26901",
          "primary": "#1b365d",
          "screenBackground": "#eeeeee",
          "text": "#A59F9A",
          "textFive": "#555555",
          "textFour": "#4C4C4C",
          "textThree": "#000",
          "textTwo": "#777777",
        }
      }
      dark={false}
      importantForAccessibility="yes"
      size={30}
      style={
        Object {
          "backgroundColor": "#fff",
          "borderColor": "#1b365d",
          "borderRadius": 2,
          "borderWidth": 1,
          "color": "transparent",
          "fontFamily": "telldusicons",
          "fontSize": 41,
          "marginLeft": 20.83275,
          "marginTop": 20.83275,
          "overflow": "hidden",
          "padding": 2,
          "textAlign": "center",
          "textAlignVertical": "center",
        }
      }
    >
      checkmark
    </Text>
  </View>
</View>
`;
